fix long thread name overlapping with updated date

--- a/code/dark_gray/css/Eloquence_Dark_Gray.css
+++ b/code/dark_gray/css/Eloquence_Dark_Gray.css
@@ -188,10 +188,14 @@
 .board-list .stats i { font-size: 10px; }
 .board-list .last-post { margin-left: 550px; padding-top: 23px; margin-right: 23px; height: 74px; }
 .board-list .user-avatar { display: block; height: 74px; width: 74px; float: left; background-image: url('https://i.imgur.com/v3Ja0d1.jpg'); background-size: cover; }
-.board-list .lp { margin-left: 82px; height: 74px; text-align: center; font-family: @small-font; }
-.board-list .lp-subject { display: block; height: 37px; border-bottom: 1px solid @pale-gray-3; line-height: 37px; font-size: 11px; }
-.board-list .lp div { height: 36px; line-height: 36px; font-size: 10px; text-transform: uppercase; }
-.board-list .lp .no-posts { display: inline-block; height: 20px; border: 1px solid @pale-gray-3; background: @pale-gray-1; padding: 0 5px; font-size: 10px; line-height: 20px; text-transform: uppercase; position: relative; top: -12px; }
+.board-list .lp { margin-left: 82px; height: 74px; line-height:30px; text-align: center; font-family: @small-font; }
+.board-list .lp-subject { display: block; font-size: 11px; vertical-align:middle; }
+.board-list .lp div { height: 36px; font-size: 10px; vertical-align:middle; }
+.board-list .lp span { display: inline-block; vertical-align:middle; line-height:normal; font-size: 11px; }
+.board-list .lp .updated_title { height: 36px; font-size: 10px; vertical-align:middle; border-bottom: 1px solid @pale-gray-3; }
+.board-list .lp .updated_text { height: 36px; line-height: 36px; font-size: 10px; text-transform: uppercase; }
+.board-list .lp .updated_title_no_posts { height: 72px; font-size: 10px; }
+.board-list .lp .no-posts { display: inline-block; height: 20px; border: 1px solid @pale-gray-3; background: @pale-gray-1; padding: 0 5px; font-size: 10px; line-height: 20px; text-transform: uppercase; width: 130px; margin: 0 auto; margin-top: 20px; }
 .board-list .no-boards { height: 12px; background: @pale-gray-1; line-height: 12px; padding: 20px; border: 1px solid @pale-gray-3; font-family: @small-font; font-size: 12px; letter-spacing: 1px; text-transform: uppercase; text-align: center; }
 .board-list .subs { margin-left: 300px; margin-top: 7px; min-height: 15px; padding: 5px; line-height: 15px; background: @pale-gray-1; border-right: 5px solid @pale-gray-3; }
 .board-list .subs .sub { display: inline-block; height: 15px; padding-right: 5px; border-right: 1px solid @pale-gray-3; font-family: @small-font; font-size: 11px; text-transform: uppercase; }
